docs(review): add code review report

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "lexgraph_legal_rag"
-version = "0.0.0"
+version = "0.1.0"
 requires-python = ">=3.8"
 
 [tool.setuptools]
@@ -14,3 +14,4 @@ packages = ["lexgraph_legal_rag"]
 [tool.pytest.ini_options]
 addopts = "-ra"
 testpaths = ["tests"]
+pythonpath = ["src"]
