--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "lexgraph_legal_rag"
-version = "0.1.0"
+version = "0.0.1"
 requires-python = ">=3.8"
+dependencies = [
+    "scikit-learn",
+    "fastapi>=0.115",
+    "httpx",
+]
 
 [tool.setuptools]
 package-dir = {"" = "src"}
