--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-pytest>=7.0
-scikit-learn>=1.7
-fastapi>=0.115
-httpx
-joblib
+pytest==7.4.4
+scikit-learn==1.7.0
+fastapi==0.115.14
+httpx==0.28.1
+faiss-cpu==1.11.0
+structlog==24.1.0
+prometheus-client==0.20.0
+pytest-cov==5.0.0
+streamlit==1.33.0
