--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,6 @@ jobs:
         with:
           python-version: '3.12'
       - run: pip install -r requirements.txt
-      - run: pip install ruff black
-      - run: ruff src tests
-      - run: black --check src tests
-      - run: pytest -q
+      - run: pip install pre-commit
+      - run: pre-commit run --all-files --show-diff-on-failure --color=always
+      - run: pytest -n auto -q
