--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "structlog==24.1.0",
     "prometheus-client==0.20.0",
     "streamlit==1.33.0",
+    "psutil>=5.9.0",
 ]
 
 [tool.setuptools]
