--- a/.dockerignore
+++ b/.dockerignore
@@ -1,51 +1,41 @@
-# Git and development files
+# Version control
 .git
 .gitignore
-.gitattributes
-README.md
-CHANGELOG.md
-CODE_REVIEW.md
-CONTRIBUTING.md
-DEVELOPMENT_PLAN.md
-SPRINT_BOARD.md
 
-# Python cache and build artifacts
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
+# Python
+__pycache__
+*.pyc
+*.pyo
+*.pyd
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+env
+pip-log.txt
+pip-delete-this-directory.txt
+.tox
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.mypy_cache
+.pytest_cache
 
 # Virtual environments
 venv/
-env/
-ENV/
 .venv/
+ENV/
+env/
 
-# IDE and editor files
+# IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# OS generated files
+# OS
 .DS_Store
 .DS_Store?
 ._*
@@ -54,51 +44,20 @@ ENV/
 ehthumbs.db
 Thumbs.db
 
-# Testing and coverage
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# Environment variables
-.env
-.env.local
-.env.development
-.env.test
-.env.production
-
-# Logs
-logs/
-*.log
-
-# Temporary files
-tmp/
-temp/
-*.tmp
-
-# Node.js (if any frontend assets)
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Local data and indices
-data/
+# Project specific
 *.bin
-*.index
-*.faiss
+*.sem
+*_results.json
+quality_gates_report.json
+test_report.json
 
-# Documentation build
-docs/_build/
+# Documentation
+docs/
+*.md
+!README.md
 
-# Local development
-docker-compose.override.yml
-local/
+# Development files
+scripts/
+tests/
+.pytest_cache/
+htmlcov/
