--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,49 +1,62 @@
-# Production Dockerfile for LexGraph Legal RAG
-FROM python:3.12-slim
+# Multi-stage production Dockerfile for Bioneural Olfactory Fusion System
+FROM python:3.12-slim as base
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONPATH=/app \
-    PIP_DISABLE_PIP_VERSION_CHECK=1 \
-    PIP_NO_CACHE_DIR=1
+    PIP_NO_CACHE_DIR=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    gcc \
-    g++ \
+    build-essential \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Create non-root user
+# Create application user
 RUN groupadd -r appuser && useradd -r -g appuser appuser
 
-# Set working directory
-WORKDIR /app
+# Build stage
+FROM base as builder
 
-# Copy requirements and install Python dependencies
-COPY requirements.txt pyproject.toml ./
-RUN pip install --no-cache-dir -r requirements.txt && \
-    pip install --no-cache-dir uvicorn[standard]
+WORKDIR /build
 
-# Copy application code
+# Copy requirements and install dependencies
+COPY requirements.txt .
+RUN pip install --user -r requirements.txt
+
+# Copy source code
 COPY src/ ./src/
 COPY *.py ./
-COPY demo_documents/ ./documents/
 
-# Create necessary directories
-RUN mkdir -p /app/logs /app/cache && \
-    chown -R appuser:appuser /app
+# Production stage
+FROM base as production
 
-# Switch to non-root user
+WORKDIR /app
+
+# Copy installed packages from builder
+COPY --from=builder /root/.local /home/appuser/.local
+
+# Copy application code
+COPY --from=builder /build/src ./src/
+COPY --from=builder /build/*.py ./
+
+# Copy configuration files
+COPY deployment/config/ ./config/
+
+# Set ownership and permissions
+RUN chown -R appuser:appuser /app
 USER appuser
 
+# Add user's local bin to PATH
+ENV PATH=/home/appuser/.local/bin:$PATH
+
 # Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD curl -f http://localhost:8000/health || exit 1
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD python -c "import requests; requests.get('http://localhost:8000/health')" || exit 1
 
-# Expose ports
-EXPOSE 8000 9090
+# Expose port
+EXPOSE 8000
 
-# Run the production application
-CMD ["python", "production_app.py"]
+# Command
+CMD ["python", "-m", "uvicorn", "src.lexgraph_legal_rag.api:app", "--host", "0.0.0.0", "--port", "8000"]
