--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -1,44 +1,30 @@
-global:
-  scrape_interval: 15s
-  evaluation_interval: 15s
-
-rule_files:
-  # - "first_rules.yml"
-  # - "second_rules.yml"
-
-scrape_configs:
-  # Prometheus itself
-  - job_name: 'prometheus'
-    static_configs:
-      - targets: ['localhost:9090']
-
-  # LexGraph Legal RAG API
-  - job_name: 'lexgraph-api'
-    static_configs:
-      - targets: ['lexgraph-api:8001']
-    scrape_interval: 5s
-    metrics_path: /metrics
-    scrape_timeout: 10s
-
-  # Redis metrics (if using redis_exporter)
-  - job_name: 'redis'
-    static_configs:
-      - targets: ['redis:6379']
-    scrape_interval: 10s
-
-  # Node exporter for system metrics (optional)
-  - job_name: 'node-exporter'
-    static_configs:
-      - targets: ['node-exporter:9100']
-    scrape_interval: 15s
-
-# Alerting configuration
 alerting:
   alertmanagers:
-    - static_configs:
-        - targets:
-          # - alertmanager:9093
-
-# Rules for alerting
+  - static_configs:
+    - targets:
+      - alertmanager:9093
+global:
+  evaluation_interval: 15s
+  scrape_interval: 15s
 rule_files:
-  - "alert_rules.yml"
+- '*.rules.yml'
+scrape_configs:
+- job_name: bioneural-api
+  metrics_path: /metrics
+  scrape_interval: 30s
+  static_configs:
+  - targets:
+    - localhost:8000
+- job_name: kubernetes-pods
+  kubernetes_sd_configs:
+  - role: pod
+  relabel_configs:
+  - action: keep
+    regex: true
+    source_labels:
+    - __meta_kubernetes_pod_annotation_prometheus_io_scrape
+  - action: replace
+    regex: (.+)
+    source_labels:
+    - __meta_kubernetes_pod_annotation_prometheus_io_path
+    target_label: __metrics_path__
